[gd_scene load_steps=8 format=3 uid="uid://m1234567890"]

[ext_resource type="Script" path="res://scripts/game_host.gd" id="1_host"]
[ext_resource type="Script" path="res://scripts/main_stage.gd" id="2_stage"]
[ext_resource type="Texture2D" path="res://assets/sprites/background.jpg" id="3_bg"]
[ext_resource type="Script" path="res://scripts/tanky.gd" id="4_tanky"]
[ext_resource type="Texture2D" path="res://assets/sprites/tanky.png" id="5_tanky_tex"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="6_ui"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ground"]
size = Vector2(1000, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tanky"]
size = Vector2(32, 32)

[node name="GameHost" type="Node"]
script = ExtResource("1_host")

[node name="MainStage" type="Node2D" parent="."]
script = ExtResource("2_stage")

[node name="Background" type="Sprite2D" parent="MainStage"]
position = Vector2(360, 240)
texture = ExtResource("3_bg")
scale = Vector2(0.3, 0.3)

[node name="Ground" type="StaticBody2D" parent="MainStage"]
collision_layer = 1
collision_mask = 0
position = Vector2(360, 450)

[node name="ColorRect" type="ColorRect" parent="MainStage/Ground"]
offset_left = -500.0
offset_top = -25.0
offset_right = 500.0
offset_bottom = 25.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainStage/Ground"]
shape = SubResource("RectangleShape2D_ground")

[node name="Tanky" type="CharacterBody2D" parent="MainStage"]
position = Vector2(100, 200)
script = ExtResource("4_tanky")

[node name="Sprite2D" type="Sprite2D" parent="MainStage/Tanky"]
texture = ExtResource("5_tanky_tex")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainStage/Tanky"]
shape = SubResource("RectangleShape2D_tanky")

[node name="JumpSound" type="AudioStreamPlayer" parent="MainStage/Tanky"]

[node name="WalkSound" type="AudioStreamPlayer" parent="MainStage/Tanky"]

[node name="DieSound" type="AudioStreamPlayer" parent="MainStage/Tanky"]

[node name="UI" type="CanvasLayer" parent="MainStage"]
script = ExtResource("6_ui")

[node name="LivesLabel" type="Label" parent="MainStage/UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 40.0
text = "Lives: 3"

[node name="ScoreLabel" type="Label" parent="MainStage/UI"]
offset_left = 570.0
offset_top = 10.0
offset_right = 710.0
offset_bottom = 40.0
text = "Score: 0"

[node name="GameOverLabel" type="Label" parent="MainStage/UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGM" type="AudioStreamPlayer" parent="."]
volume_db = -6.0
autoplay = false
